Issue #22836: Keep exception reports sensible despite errors